added password passing for windows VM's from server property file.  Updated code to start freeRDP.